Closed Bug 1668100 Opened 4 years ago Closed 4 years ago

AXUIElementsForSearchPredicate should use target element as root for search

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- fixed
firefox83 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [mac2020_2])

Attachments

(1 file, 1 obsolete file)

It seems that VoiceOver expects search predicate calls to be bound by the target element they are called on. If they are not, VO goes into an endless loop because it expects the results of the search to be descendants of the target.

Instead of having the web area be the implicit root, the search results should
exclusively be descendants of the target element that the search is called on.

Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/22c636393a44
Make target root for AXUIElementsForSearchPredicate. r=morgan
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Set release status flags based on info from the regressing bug 1657418

Do we need this on beta82?

Flags: needinfo?(eitan)

Instead of having the web area be the implicit root, the search results should
exclusively be descendants of the target element that the search is called on.

Comment on attachment 9180221 [details]
Bug 1668100 - Make target root for AXUIElementsForSearchPredicate. r=morgan!

Beta/Release Uplift Approval Request

  • User impact if declined: VoiceOver cursor will not work in many websites
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Medium
  • Why is the change risky/not risky? (and alternatives if risky): This isn't a one liner, but it also has tests.
  • String changes made/needed:
Flags: needinfo?(eitan)
Attachment #9180221 - Flags: approval-mozilla-beta?

Comment on attachment 9180221 [details]
Bug 1668100 - Make target root for AXUIElementsForSearchPredicate. r=morgan!

approved for 82.0b9

Attachment #9180221 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This didn't make b9 after all, but should be in today's 82 rc1.

Attachment #9180221 - Attachment is obsolete: true
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: