Bug 1668100 - Make target root for AXUIElementsForSearchPredicate. r=morgan

Instead of having the web area be the implicit root, the search results should
exclusively be descendants of the target element that the search is called on.

Differential Revision: https://phabricator.services.mozilla.com/D91826